2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-create-note-form): Refer to anchor in query.
	(note-detailed): Refer to anchor in delete_note query.
	(result-detailed): Add anchor.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (result-detailed): Add notes button.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (note-detailed): Add details button.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (get_status_omp): Request notes with task.

	* src/html/src/omp.xsl (html-report-table): Add notes window.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (init_validator): Extend the "port" rule to allow ports like
	"port-name (111/tcp)".

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-report-details, report, task)
	(html-create-note-form, note-detailed, result-detailed): Pass the "notes"
	flag when requesting a report.  Preserve the notes flag across new_note
	and delete_note.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-report-details): Test filters/notes directly
	instead of counting it.

2010-02-18  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-config-family-table): Count in
	get_nvt_details_response instead of all/get_nvt_details_response, in
	view case.

2010-02-17  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/gsa-style.css (.note_top_line): New style.

	* src/html/src/omp.xsl (note) [details]: Put note text in yellow box.

2010-02-17  Matthew Mundell <matthew.mundell@intevation.de>

	Add a note details page.

	* src/gsad_omp.c (get_note_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/gsad.c (init_validator): Add get_note command.
	(exec_omp_get): Add get_note command handling.
